--- a/html/htmlVersuch.html
+++ b/html/htmlVersuch.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="UTF-8">	
+	<title>Test HTML-Page</title>
+	<style>
+	</style>
+
 </head>
 <body>
-
+	<h1>Hallo</h1>
 </body>
 </html>
