--- a/html/Games.html
+++ b/html/Games.html
@@ -6,8 +6,27 @@
 	</head>
 	<body>
 		<h1>Videogames I play and love</h1>
-		<h2>Skyrim</h2>
-		<h2>The Sims 4</h2>
-		<h2>Lego Marvel Avengers</h2>
+			<h2>Skyrim</h2>
+				<p>Skyrim is one of my favourite games of all time. Athough it is sometimes pretty hard to play because of my pretty 
+				   crappy laptop, it is an awesome game with more interesting side quests then the main quest in most other games.
+				   I have to admit, I only did the first part of the main quest (the first 20 min), now i haven´t saved the world, but i´m a 
+				   student of wizardry, a companion and a member of the thief guild which is pretty cool.
+				   Although it quite old for a videogame (published 2011) it is still one of the best ( probably on place 2 after 
+				   "The Witcher III wild hunt")</p> 
+		
+			<h2>The Sims 4</h2>
+				<p>The Sims is one of the most played videogames in the world, and i think it deserves it. It may not have a universal story, 
+			       but the cool thing about The Sims is that you can invent your own stories no matter how crazy they are. E.g. I once had a vampire
+			       who baked really much, which is pretty useless because Vampires don´t have to eat human food, and than  i let her put it in 
+			       a public spot, so everybody could eat it. Also maybe so that the people didn´t buy so much from the food trucks.
+			    
+			<h2>Lego Marvel Avengers</h2>
+				<p>My favorite Logo Game. I just love the lego humour. It is amazing. Sometimes in story i had to laugh so hard, I nearly dropped 
+			       my controller. And that means something because I love my controller.
+			       More then one year after I bought it i am almost finished. I have 98% now, but i really want to finish it completely, because i 
+			       made a bet/challenge with myself that i wouldn´t buy Lego marvel Superheroes 2 before i finished it 100%. But i think it won´t
+			       be possible b.c. one golden brick just isn´t there, therefore I think i will be stuck at 99,9% which wold suck. I think I would 
+			       cont this as 100% so i could still buy Lego marvel Superheroes </p>
+			       
 	</body>
 </html>
