--- a/html/Games.html
+++ b/html/Games.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="ISO-8859-1">
 		<title>Games I play</title>
+		
 	</head>
 	<body>
 		<h1>Videogames I play and love</h1>
@@ -21,7 +22,7 @@
 			       a public spot, so everybody could eat it. Also maybe so that the people didn´t buy so much from the food trucks.
 			    
 			<h2>Lego Marvel Avengers</h2>
-				<p>My favorite Logo Game. I just love the lego humour. It is amazing. Sometimes in story i had to laugh so hard, I nearly dropped 
+				<p>My favorite Lego Game. I just love the lego humour. It is amazing. Sometimes in story i had to laugh so hard, I nearly dropped 
 			       my controller. And that means something because I love my controller.
 			       More then one year after I bought it i am almost finished. I have 98% now, but i really want to finish it completely, because i 
 			       made a bet/challenge with myself that i wouldn´t buy Lego marvel Superheroes 2 before i finished it 100%. But i think it won´t
